--- a/global.css
+++ b/global.css
@@ -1,12 +1,13 @@
 html {
     width: 100%;
     height: 100%;
-    background-color: #000;
+    background-color: rgba(255, 255, 255, 0);
   }
   body {
+    padding: 0;
     margin: 0;
     overflow: hidden;
-    color: #000;
+    color: rgba(255, 255, 255, 0);
   }
   .mainDiv {
     display: flex;
@@ -15,7 +16,7 @@ html {
   }
   #globe-container,
   .mainDiv {
-    background-color: #000;
+    background-color: rgba(255, 255, 255, 0);
     height: 100%;
   }
   #globe-container {
